# mypua

./: .env.example  DESIGN.md  README.md  package-lock.json  package.json  server.js
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
lib/: analyzer.js  asr.js
public/: index.html  manifest.webmanifest  sw.js
